src/test/resources/syntax/invalid/group_definition_duplicate_key.unpick
unpick v3
const float
    0 = 0
    0.0 = 0.0